Fix tablet alignment issues for event logs
This will make sure our event log content is properly aligned
on tablet and desktop views. It will also make the date/time value
on the server overview page always display underneath the 'BMC time'
label in a destkop view–currently the date value will wrap to a
new line if the string is too long.

- Update markup to use Foundation grid layout classes on the
  server overview event log table

Tested: Event log tables on server overview page and event
        log page

--- a/app/common/styles/elements/quicklinks.scss
+++ b/app/common/styles/elements/quicklinks.scss
@@ -39,6 +39,13 @@
     .bmc-time {
       text-align: right;
       max-width: 17em;
+      float: right;
+      @include mediaQuery(medium) {
+        display: block;
+        text-align: left;
+        float: none;
+        margin-top: 0.25em;
+      }
     }
     &:after {
       display: none;
